# vstore

./: .env.example  .gitignore  README.md  package.json
api/: .flake8  README.md  alembic.ini  db.sqlite3  mypy.ini  pyproject.toml  sqlite.db  vstore.db
api/alembic/: env.py
api/alembic/versions/: 4d3da81b380d_.py  6c32a11d992c_init.py  9c793bfb14d7_update_book_author_rel.py  acef089c5478_init.py  ba4fa4e54cec_add_book_author_rel.py  e54138ce217e_.py  ef4ff4f8443f_init.py  fd5161000196_books_tables_extra_cols.py
api/app/: dependencies.py  deps.py  main.py
api/app/api/: deps.py
api/app/core/: config.py
api/app/database/: base.py  base_class.py  db.py  session.py
api/app/helpers/: BaseCrud.py  book.py
api/app/models/: __init__.py  author.py  book.py  genre.py  mixins.py
api/app/schemas/: __init__.py  author.py  base_schema.py  book.py  genre.py  user.py
api/authors/: models.py  serializers.py  urls.py  views.py
api/authors/migrations/: 0001_initial.py  0002_author_created_at_author_updated_at.py  0003_alter_author_books.py  0004_remove_author_books_remove_author_name_and_more.py  0005_alter_author_bio.py
api/books/: admin.py  models.py  serializers.py  urls.py  views.py
api/books/migrations/: 0001_initial.py  0002_alter_image_id.py  0002_genre_book_created_at_book_is_bestseller_and_more.py  0003_alter_book_options_book_rating_and_more.py  0003_alter_genre_name.py  0004_delete_genre_alter_book_genres.py  0005_book_authors_alter_book_genres_alter_book_summary.py  0006_language_alter_book_options_book_isbn_and_more.py  0007_alter_book_options_alter_book_summary.py  0008_alter_book_summary.py
api/core/: settings.py  wsgi.py
api/genres/: models.py  serializers.py  urls.py  views.py
api/genres/migrations/: 0001_initial.py
api/main/: settings.py  urls.py
api/templates/: docs.html
(+36 files in other folders)
