[tool.poetry]
name = "vstore-api"
version = "0.1.0"
description = "VStore Ecommerce api"
authors = ["Sergio Barria"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
alembic = "^1.7.6"
sqlmodel = "^0.0.6"
aiosqlite = "^0.17.0"
greenlet = "^1.1.2"
asyncpg = "^0.25.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
