[tool.poetry]
name = "VStore API"
version = "0.1.0"
description = "Backend API for the VStore web & mobile application"
authors = ["Sergio Barria"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
PyYAML = "^6.0"
django-rest-swagger = "^2.2.0"
djoser = "^2.1.0"
django-cloudinary-storage = "^0.3.0"
Pillow = "^9.0.1"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
